--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <main class="flex-grow p-6 overflow-y-auto pb-20">
                 <!-- Admin Panel Dashboard/Settings Tabs -->
                 <div class="flex border-b border-gray-700 mb-6">
-                    <button id="tab-dashboard" class="px-4 py-2 text-gray-400 font-semibold hover:text-white border-b-2 border-transparent hover:border-blue-500 transition-colors duration-200">Dashboard</button>
+                    <button id="tab-dashboard" class="px-4 py-2 text-gray-400 font-semibold hover:text-white border-b-2 border-transparent hover:border-blue-500 transition-colors duration-200">Gestión de usuarios</button>
                     <button id="tab-settings" class="px-4 py-2 text-white font-semibold border-b-2 border-blue-500">Settings</button>
                 </div>
 
@@ -523,8 +523,8 @@
 
                 <!-- Dashboard Panel (Placeholder) -->
                 <div id="panel-dashboard" class="content-panel">
-                    <h3 class="text-xl font-semibold mb-4 border-b border-gray-700 pb-2 text-blue-400 font-bold">📊 Dashboard Overview</h3>
-                    <p class="text-gray-400">Contenido del Dashboard.</p>
+                    <h3 class="text-xl font-semibold mb-4 border-b border-gray-700 pb-2 text-blue-400 font-bold">📊 Gestión de usuarios</h3>
+                    <p class="text-gray-400">Contenido de Gestión de usuarios.</p>
                 </div>
 
                 <!-- Fixed Save/Reset Buttons -->
