--- a/index.html
+++ b/index.html
@@ -239,9 +239,14 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
                     </svg>
                 </button>
-                <!-- Removed 'New Chat' label -->
             </div>
             <nav class="flex-grow space-y-2">
+                <a href="#" class="flex items-center p-2 rounded-md hover:bg-gray-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                    </svg>
+                    <span class="text-hidden">Gestión de usuarios</span>
+                </a>
                 <a href="#" class="flex items-center p-2 rounded-md hover:bg-gray-700">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m0 0l7 7 7-7M19 10v10a1 1 0 001 1h3m-10-9v2m0 0v2m0 0v2m0 0v2" />
@@ -264,50 +269,20 @@
         <div class="flex flex-grow bg-gray-800 shadow-lg border border-gray-700 overflow-hidden w-full">
             <!-- Main Content Area -->
             <main class="flex-grow p-6 overflow-y-auto pb-20">
-                <!-- Admin Panel Dashboard/Settings Tabs -->
-                <div class="flex border-b border-gray-700 mb-6">
-                    <button id="tab-dashboard" class="px-4 py-2 text-gray-400 font-semibold hover:text-white border-b-2 border-transparent hover:border-blue-500 transition-colors duration-200">Gestión de usuarios</button>
-                    <button id="tab-settings" class="px-4 py-2 text-white font-semibold border-b-2 border-blue-500">Settings</button>
-                </div>
-
-                <!-- Settings Panel (Active by default based on image) -->
+                <!-- Admin Panel Settings Section -->
                 <div id="panel-settings" style="height: calc(100vh - 250px); display: flex; width: 100%;" class="content-panel active">
-                    <div class="flex" style="width: 100%;">
-                        <!-- Internal Sidebar Navigation for Settings -->
-                        <aside class="w-56 bg-gray-900 text-gray-300 p-4 flex flex-col flex-shrink-0 rounded-md mr-6">
-                            <nav class="flex-grow">
-                                <ul>
-                                    <li class="mb-2">
-                                        <a href="#" id="nav-general" class="sidebar-nav-item active">
-                                            <span class="mr-3">⚙️</span> General
-                                        </a>
-                                    </li>
-                                    <li class="mb-2">
-                                        <a href="#" id="nav-usuarios" class="sidebar-nav-item">
-                                            <span class="mr-3">👥</span> Usuarios
-                                        </a>
-                                    </li>
-                                    <li class="mb-2">
-                                        <a href="#" id="nav-modelos" class="sidebar-nav-item">
-                                            <span class="mr-3">🧠</span> Modelos
-                                        </a>
-                                    </li>
-                                    <li class="mb-2">
-                                        <a href="#" id="nav-ingesta" class="sidebar-nav-item">
-                                            <span class="mr-3">📥</span> Ingesta
-                                        </a>
-                                    </li>
-                                    <li class="mb-2">
-                                        <a href="#" id="nav-web-scraping" class="sidebar-nav-item">
-                                            <span class="mr-3">🌐</span> Web Scraping
-                                        </a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </aside>
+                    <div class="flex flex-col w-full">
+                        <!-- New Horizontal Tabs for Settings Sub-panels -->
+                        <div class="flex border-b border-gray-700 mb-6 px-6 pt-4">
+                            <button id="sub-tab-general" class="px-4 py-2 text-white font-semibold border-b-2 border-blue-500 transition-colors duration-200">General</button>
+                            <button id="sub-tab-usuarios" class="px-4 py-2 text-gray-400 font-semibold hover:text-white border-b-2 border-transparent hover:border-blue-500 transition-colors duration-200">Usuarios</button>
+                            <button id="sub-tab-modelos" class="px-4 py-2 text-gray-400 font-semibold hover:text-white border-b-2 border-transparent hover:border-blue-500 transition-colors duration-200">Modelos</button>
+                            <button id="sub-tab-ingesta" class="px-4 py-2 text-gray-400 font-semibold hover:text-white border-b-2 border-transparent hover:border-blue-500 transition-colors duration-200">Ingesta</button>
+                            <button id="sub-tab-web-scraping" class="px-4 py-2 text-gray-400 font-semibold hover:text-white border-b-2 border-transparent hover:border-blue-500 transition-colors duration-200">Web Scraping</button>
+                        </div>
 
                         <!-- Settings Content Panels -->
-                        <div class="flex-grow" style="overflow: auto;">
+                        <div class="flex-grow px-6" style="overflow: auto;">
                             <!-- General Panel -->
                             <div id="settings-panel-general" class="content-panel active">
                                 <h3 class="text-xl font-semibold mb-4 border-b border-gray-700 pb-2 text-blue-400 font-bold">🤖 Configuración General</h3>
@@ -509,7 +484,6 @@
                                             <div class="w-11 h-6 bg-gray-600 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border after:border-gray-300 after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
                                         </label>
                                     </div>
-                                    <h4 class="text-lg font-medium text-gray-300 mt-6 mb-2 font-bold">Configuración del Cargador de YouTube</h4>
                                     <div>
                                         <label for="youtube-language" class="form-label">Idioma</label>
                                         <input type="text" id="youtube-language" value="en" class="form-input">
@@ -519,12 +493,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <!-- Dashboard Panel (Placeholder) -->
-                <div id="panel-dashboard" class="content-panel">
-                    <h3 class="text-xl font-semibold mb-4 border-b border-gray-700 pb-2 text-blue-400 font-bold">📊 Gestión de usuarios</h3>
-                    <p class="text-gray-400">Contenido de Gestión de usuarios.</p>
                 </div>
 
                 <!-- Fixed Save/Reset Buttons -->
@@ -546,35 +514,33 @@
                 toggleIconClose: document.getElementById('toggle-icon-close'),
                 leftSidebarTextElements: document.querySelectorAll('#left-sidebar .text-hidden'),
 
-                // Top Bar Tabs
-                tabDashboard: document.getElementById('tab-dashboard'),
-                tabSettings: document.getElementById('tab-settings'),
+                // Top Bar Tabs (now only one main section)
+                // Removed tabSettings as it's no longer needed for top-level navigation
 
                 // Settings Sub-panels (now main content panels)
                 settingsPanelGeneral: document.getElementById('settings-panel-general'),
-                settingsPanelUsuarios: document.getElementById('settings-panel-usuarios'), // Renamed
-                settingsPanelModelos: document.getElementById('settings-panel-modelos'), // Renamed
-                settingsPanelIngesta: document.getElementById('settings-panel-ingesta'), // Renamed
-                settingsPanelWebScraping: document.getElementById('settings-panel-web-scraping'), // Renamed
+                settingsPanelUsuarios: document.getElementById('settings-panel-usuarios'),
+                settingsPanelModelos: document.getElementById('settings-panel-modelos'),
+                settingsPanelIngesta: document.getElementById('settings-panel-ingesta'),
+                settingsPanelWebScraping: document.getElementById('settings-panel-web-scraping'),
 
-                // Main Content Panels (Dashboard and Settings)
-                panelDashboard: document.getElementById('panel-dashboard'),
+                // Main Content Panels (Settings)
                 panelSettings: document.getElementById('panel-settings'),
 
-                // Settings Sidebar Navigation (new)
-                settingsNavButtons: {
-                    general: document.getElementById('nav-general'),
-                    usuarios: document.getElementById('nav-usuarios'), // Renamed
-                    modelos: document.getElementById('nav-modelos'), // Renamed
-                    ingesta: document.getElementById('nav-ingesta'), // Renamed
-                    webScraping: document.getElementById('nav-web-scraping'), // Renamed
+                // Settings Horizontal Tabs (new)
+                settingsSubTabs: {
+                    general: document.getElementById('sub-tab-general'),
+                    usuarios: document.getElementById('sub-tab-usuarios'),
+                    modelos: document.getElementById('sub-tab-modelos'),
+                    ingesta: document.getElementById('sub-tab-ingesta'),
+                    webScraping: document.getElementById('sub-tab-web-scraping'),
                 },
                 settingsContentPanels: {
                     general: document.getElementById('settings-panel-general'),
-                    usuarios: document.getElementById('settings-panel-usuarios'), // Renamed
-                    modelos: document.getElementById('settings-panel-modelos'), // Renamed
-                    ingesta: document.getElementById('settings-panel-ingesta'), // Renamed
-                    webScraping: document.getElementById('settings-panel-web-scraping'), // Renamed
+                    usuarios: document.getElementById('settings-panel-usuarios'),
+                    modelos: document.getElementById('settings-panel-modelos'),
+                    ingesta: document.getElementById('settings-panel-ingesta'),
+                    webScraping: document.getElementById('settings-panel-web-scraping'),
                 },
 
                 // Form elements for data (from previous versions, adapted)
@@ -625,7 +591,7 @@
             for (const key in elements) {
                 if (elements.hasOwnProperty(key)) {
                     if (typeof elements[key] === 'object' && elements[key] !== null && !Array.isArray(elements[key])) {
-                        // For nested objects like settingsNavButtons or settingsContentPanels
+                        // For nested objects like settingsSubTabs or settingsContentPanels
                         for (const subKey in elements[key]) {
                             if (elements[key].hasOwnProperty(subKey)) {
                                 console.log(`  elements.${key}.${subKey}:`, elements[key][subKey]);
@@ -805,32 +771,26 @@
                 showToast('Configuración restablecida a los valores predeterminados.', false);
             }
 
+            // The activateMainPanel function is no longer needed as there's only one main panel.
+            // The settings panel will always be active.
+            /*
             function activateMainPanel(panelName) {
-                // Remove 'active' class from all main content tabs
-                elements.tabDashboard.classList.remove('border-blue-500', 'text-white');
-                elements.tabDashboard.classList.add('border-transparent', 'text-gray-400', 'hover:text-white');
                 elements.tabSettings.classList.remove('border-blue-500', 'text-white');
                 elements.tabSettings.classList.add('border-transparent', 'text-gray-400', 'hover:text-white');
-
-                // Hide all main content panels
-                elements.panelDashboard.classList.remove('active');
                 elements.panelSettings.classList.remove('active');
-
-                // Activate selected main tab and panel
-                if (panelName === 'dashboard') {
-                    elements.tabDashboard.classList.add('border-blue-500', 'text-white');
-                    elements.panelDashboard.classList.add('active');
-                } else if (panelName === 'settings') {
+                if (panelName === 'settings') {
                     elements.tabSettings.classList.add('border-blue-500', 'text-white');
                     elements.panelSettings.classList.add('active');
                 }
             }
+            */
 
             function activateSettingsSubPanel(subPanelName) {
-                // Remove 'active' class from all settings sidebar navigation items
-                for (const key in elements.settingsNavButtons) {
-                    if (elements.settingsNavButtons.hasOwnProperty(key) && elements.settingsNavButtons[key]) {
-                        elements.settingsNavButtons[key].classList.remove('active');
+                // Remove 'active' class from all settings horizontal tabs
+                for (const key in elements.settingsSubTabs) {
+                    if (elements.settingsSubTabs.hasOwnProperty(key) && elements.settingsSubTabs[key]) {
+                        elements.settingsSubTabs[key].classList.remove('border-blue-500', 'text-white');
+                        elements.settingsSubTabs[key].classList.add('border-transparent', 'text-gray-400', 'hover:text-white');
                     }
                 }
 
@@ -841,12 +801,13 @@
                     }
                 }
 
-                // Add 'active' class to the selected settings sidebar navigation item
-                const activeNavButton = elements.settingsNavButtons[subPanelName];
-                if (activeNavButton) {
-                    activeNavButton.classList.add('active');
+                // Activate selected horizontal tab
+                const activeSubTab = elements.settingsSubTabs[subPanelName];
+                if (activeSubTab) {
+                    activeSubTab.classList.add('border-blue-500', 'text-white');
+                    activeSubTab.classList.remove('border-transparent', 'text-gray-400', 'hover:text-white');
                 } else {
-                    console.error('Botón de navegación de settings no encontrado para el panel:', subPanelName);
+                    console.error('Pestaña de configuración no encontrada para el panel:', subPanelName);
                 }
 
                 // Show the selected settings content panel
@@ -858,16 +819,15 @@
                 }
             }
 
-            // Event Listeners for Main Tabs
-            elements.tabDashboard.addEventListener('click', (e) => { e.preventDefault(); activateMainPanel('dashboard'); });
-            elements.tabSettings.addEventListener('click', (e) => { e.preventDefault(); activateMainPanel('settings'); });
+            // Event Listeners for Main Tabs (only Settings remains, so no need for a click listener here)
+            // elements.tabSettings.addEventListener('click', (e) => { e.preventDefault(); activateMainPanel('settings'); });
 
-            // Event Listeners for Settings Sub-panels
-            if (elements.settingsNavButtons.general) elements.settingsNavButtons.general.addEventListener('click', (e) => { e.preventDefault(); activateSettingsSubPanel('general'); });
-            if (elements.settingsNavButtons.usuarios) elements.settingsNavButtons.usuarios.addEventListener('click', (e) => { e.preventDefault(); activateSettingsSubPanel('usuarios'); });
-            if (elements.settingsNavButtons.modelos) elements.settingsNavButtons.modelos.addEventListener('click', (e) => { e.preventDefault(); activateSettingsSubPanel('modelos'); });
-            if (elements.settingsNavButtons.ingesta) elements.settingsNavButtons.ingesta.addEventListener('click', (e) => { e.preventDefault(); activateSettingsSubPanel('ingesta'); });
-            if (elements.settingsNavButtons.webScraping) elements.settingsNavButtons.webScraping.addEventListener('click', (e) => { e.preventDefault(); activateSettingsSubPanel('webScraping'); });
+            // Event Listeners for Settings Sub-panels (horizontal tabs)
+            if (elements.settingsSubTabs.general) elements.settingsSubTabs.general.addEventListener('click', (e) => { e.preventDefault(); activateSettingsSubPanel('general'); });
+            if (elements.settingsSubTabs.usuarios) elements.settingsSubTabs.usuarios.addEventListener('click', (e) => { e.preventDefault(); activateSettingsSubPanel('usuarios'); });
+            if (elements.settingsSubTabs.modelos) elements.settingsSubTabs.modelos.addEventListener('click', (e) => { e.preventDefault(); activateSettingsSubPanel('modelos'); });
+            if (elements.settingsSubTabs.ingesta) elements.settingsSubTabs.ingesta.addEventListener('click', (e) => { e.preventDefault(); activateSettingsSubPanel('ingesta'); });
+            if (elements.settingsSubTabs.webScraping) elements.settingsSubTabs.webScraping.addEventListener('click', (e) => { e.preventDefault(); activateSettingsSubPanel('webScraping'); });
 
             // Left Sidebar Toggle
             elements.toggleLeftSidebarButton.addEventListener('click', () => {
@@ -894,7 +854,8 @@
 
             // Initial setup
             resetToDefaults();
-            activateMainPanel('settings'); // Start on Settings tab
+            // Since there's only one main panel now, we just ensure it's active
+            elements.panelSettings.classList.add('active'); // Ensure settings panel is active
             activateSettingsSubPanel('general'); // Start on General settings sub-panel
             showToast('Valores predeterminados cargados.', false);
         });
